WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282420
[Cocoa] REGRESSION(
284617@main
): Some HDR images may be displayed as black boxes when converting to SDR
https://bugs.webkit.org/show_bug.cgi?id=282420
Summary
[Cocoa] REGRESSION(284617@main): Some HDR images may be displayed as black bo...
Said Abou-Hallawa
Reported
2024-10-31 17:54:12 PDT
1. Open
https://gregbenzphotography.com/hdr-gallery/
# 2. Click on the button "Switch to HDR images" Result: All the images are displayed as black boxes.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-31 17:54:28 PDT
<
rdar://problem/139041771
>
Said Abou-Hallawa
Comment 2
2024-10-31 18:05:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/36031
EWS
Comment 3
2024-11-05 09:58:42 PST
Committed
286164@main
(78f467e29fba): <
https://commits.webkit.org/286164@main
> Reviewed commits have been landed. Closing PR #36031 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug