REGRESSION(284617@main): Some HDR images may be displayed as black boxes when converting to SDR https://bugs.webkit.org/show_bug.cgi?id=282420 rdar://139041771

Reviewed by Simon Fraser.

284617@main made NativeImage::draw() no longer convert the HDR image to SDR image
using the un-accelerated GraphicsContext. But ShareableBitmap needs to create its
GraphicsContext with extendedSRGBColorSpace to get the HDR image drawn correctly.

Currently DestinationColorSpace::asRGB() returns sRGBColorSpace true, if the image
colorspace usesRec2100TransferFunctions(). DestinationColorSpace::asRGB() should
return nullopt in this case. This will force validateColorSpace() to return
extendedSRGBColorSpace.

NativeImage::draw() converts the image to extendedSRGBColorSpace if its colorspace
usesRec2100TransferFunctions(). So convertToDestinationColorSpaceIfNeeded() can
be deleted.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebCore/platform/graphics/DestinationColorSpace.cpp:
(WebCore::DestinationColorSpace::asRGB const):
(WebCore::DestinationColorSpace::usesExtendedRange const):
(WebCore::DestinationColorSpace::usesRec2100TransferFunctions const):
* Source/WebCore/platform/graphics/DestinationColorSpace.h:
(WebCore::DestinationColorSpace::usesStandardRange const):
* Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContextCG::drawNativeImageInternal):
* Source/WebCore/platform/graphics/cg/GraphicsContextCG.h:
* Source/WebCore/platform/graphics/cg/NativeImageCG.cpp:
(WebCore::NativeImage::draw):
* Source/WebCore/platform/graphics/cg/ShareableBitmapCG.mm:
(WebCore::ShareableBitmapConfiguration::calculateBytesPerPixel):
(WebCore::ShareableBitmapConfiguration::calculateBitmapInfo):
(WebCore::wantsExtendedRange): Deleted.
* Source/WebCore/platform/graphics/cocoa/GraphicsContextCocoa.mm:
(WebCore::GraphicsContextCG::convertToDestinationColorSpaceIfNeeded): Deleted.

Canonical link: https://commits.webkit.org/286164@main